# SearchSECOController

./: .clang-format  .clang-tidy  .dockerignore  .fairseco_history.json  .gitignore  .gitlab-ci.yml  .gitmodules  ANTLRErrorListener_8h_source.html  ANTLRErrorStrategy_8h_source.html  ANTLRFileStream_8h_source.html  ANTLRInputStream_8h_source.html  ATNConfigSet_8h_source.html  ATNConfig_8h_source.html  ATNDeserializationOptions_8h_source.html  ATNDeserializer_8h_source.html  ATNSerializer_8h_source.html  ATNSimulator_8h_source.html  ATNState_8h_source.html  ATNType_8h_source.html  ATN_8h_source.html  AbstractParseTreeVisitor_8h_source.html  AbstractPredicateTransition_8h_source.html  AbstractSyntaxToHashable_8h_source.html  ActionTransition_8h_source.html  AmbiguityInfo_8h_source.html  AntlrParser_8h_source.html  Any_8h_source.html  ArrayPredictionContext_8h_source.html  Arrays_8h_source.html  AtomTransition_8h_source.html  BailErrorStrategy_8h_source.html  BaseErrorListener_8h_source.html  BasicBlockStartState_8h_source.html  BasicState_8h_source.html  BitSet_8h_source.html  BlockEndState_8h_source.html  BlockStartState_8h_source.html  BufferedTokenStream_8h_source.html  CITATION.cff  CMakeLists.txt  (+3491 more)
.github/workflows/: checking.yml  checking_example.yml  gh-pages.yml  image_build.yml  testing.yml
.version/: increment_version.bat
Controller_Tests/: CMakeLists.txt  Commands_tests.cpp  Controller_Tests.vcxproj  Controller_Tests.vcxproj.filters  DatabaseAPIMock.cpp  DatabaseAPIMock.h  IntegrationCrawler_tests.cpp  IntegrationDatabaseAPI_tests.cpp  IntegrationParser_tests.cpp  IntegrationSpider_tests.cpp  Integration_tests.cpp  NetworkUtils_tests.cpp  Print_tests.cpp  Utils_tests.cpp  commandsTests.cpp  commands_tests.cpp  databaseAPIMock.cpp  database_api_mock.cpp  integrationTestsCrawler.cpp  integrationTestsDatabaseAPI.cpp  integrationTestsParser.cpp  integrationTestsSpider.cpp  integration_tests_crawler.cpp  integration_tests_database_api.cpp  integration_tests_parser.cpp  integration_tests_spider.cpp  networkUtilsTests.cpp  network_utils_tests.cpp  packages.config  pch.cpp  pch.h  printTests.cpp  print_tests.cpp  regexTests.cpp  regex_tests.cpp  systemTestUpdate.cpp  systemTestsCheck.cpp  systemTestsCheckUpload.cpp  systemTestsHelp.cpp  systemTestsStart.cpp  (+7 more)
Documentation/src/: FutureImprovements.tex  Licensing.tex  Main.tex  Observations.tex  Titlepage.tex  UserManual-STANDALONE.tex
Documentation/src/Components/: Controller.tex  Crawler.tex  Database.tex  Parser.tex  Spider.tex
Documentation/src/Pictures/: icon_and_text_blue.tex
Executable/: .env  CMakeLists.txt  Controller.cpp  Executable.vcxproj  Executable.vcxproj.filters  controller.cpp  controller.h  packages.config
Executable/cfg/: config.txt  config_example.txt
Executable/reports/: HandyControl.txt
SearchSECOController/: .env  CMakeLists.txt  controller.cpp  extensions
SearchSECOController/cfg/: config.txt
libSearchSECOController/: CMakeLists.txt  commandFactory.cpp  commandFactory.h  commands.cpp  commands.h  databaseRequests.cpp  databaseRequests.h  dto.h  entrypoint.cpp  entrypoint.h  error.cpp  flags.cpp  flags.h  input.cpp  input.h  moduleFacades.cpp  moduleFacades.h  networkUtils.cpp  networkUtils.h  networking.cpp  networking.h  print.cpp  print.h  projectMetadata.h  regexWrapper.cpp  regexWrapper.h  termination.cpp  termination.h  utils.cpp  utils.h
libs/: Parser.lib  curlcpp.lib  libcurl.lib  libcurld.lib
licenseMatrix/: createLicenseMatrix.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+49 more)
src/: CMakeLists.txt  Commands.cpp  Commands.h  Controller.cpp  DatabaseRequests.cpp  DatabaseRequests.h  Error.cpp  Flags.cpp  Flags.h  Input.cpp  Input.h  NetworkUtils.cpp  NetworkUtils.h  Networking.cpp  Networking.h  Parser.cpp  Parser.h  Parser2.cpp  Print.cpp  Print.h  Utils.cpp  Utils.h  commandFactory.cpp  commandFactory.h  commands.cpp  commands.h  databaseRequests.cpp  databaseRequests.h  database_requests.cpp  database_requests.h  dto.h  entrypoint.cpp  entrypoint.h  error.cpp  flagParser.h  flags.cpp  flags.h  input.cpp  input.h  moduleFacades.cpp  (+21 more)
src/loguru/: loguru.cpp  loguru.hpp
tests/: CMakeLists.txt  databaseAPIMock.cpp  databaseAPIMock.h  integrationTestsCrawler.cpp  integrationTestsDatabaseAPI.cpp  integrationTestsParser.cpp  integrationTestsSpider.cpp  networkUtilsTests.cpp  pch.cpp  printTests.cpp  regexTests.cpp  systemTestsCheckUpload.cpp  systemTestsHelp.cpp  systemTestsUpload.cpp  systemTestsUtils.cpp  systemTestsUtils.h  utilsTests.cpp
vsProjects/: Controller_Tests.vcxproj  Executable.vcxproj  SearchSECOController.vcxproj  libSearchSECOController.vcxproj  libSearchSECOController.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
